--- a/index3.html
+++ b/index3.html
@@ -28,7 +28,7 @@
       const myHeading = document.querySelector("h1");
       myHeading.textContent = "Hello world!";
       document.querySelector("html").addEventListener("click", function () {
-        alert("痛っ! つつかないで!");
+        alert("わあ！わあ！わあ！");
       });
 
     </script>
